# CHIP-8

./: .gitignore  CMakeLists.txt  README.md  chip8.cpp  chip8.h  main.cpp
ROMs/: test_op00E0.ch8  test_op00E0.hex  test_op1.ch8  test_op1.hex  test_op3.ch8  test_op3.hex  test_op4.ch8  test_op4.hex  test_op5.ch8  test_op5.hex  test_op7.ch8  test_op7.hex  test_op8XY0.hex  test_op8XY1.ch8  test_op8XY1.hex  test_op8XY2.ch8  test_op8XY2.hex  test_op8XY3.ch8  test_op8XY3.hex  test_op8XY4.ch8  test_op8XY4.hex  test_op8XY5.ch8  test_op8XY5.hex  test_op8XY6.ch8  test_op8XY6.hex  test_op8XY7.ch8  test_op8XY7.hex  test_op8XYE.ch8  test_op8XYE.hex  test_op9.ch8  test_op9.hex  test_opB.ch8  test_opB.hex  test_opD.ch8  test_opD.hex  test_opEX9E.ch8  test_opEX9E.hex  test_opEXA1.ch8  test_opEXA1.hex  test_opFX1E.ch8  (+11 more)
